--- a/1.html
+++ b/1.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
- <title>노바헌터즈</title>
+ <title>Nova Hunters</title>
  <meta charset="utf-8">
 </head>
 <body>
-<h1><a href="index.html">HTML</a></h1>
+<h1><a href="index.html">Nova Hunters</a></h1>
 <ol>
- <li><a href="1.html">이거뭐임</a></li>
- <li><a href="2.html">쩐다</a></li>
- <li><a href="3.html">개쩐다</a></li>
+ <li><a href="1.html">1화 보러가기</a></li>
+ <li><a href="2.html">스티커 통판</a></li>
+ <li><a href="3.html">쓸게없네</a></li>
  <li><a href="2.html">눌러보자</a></li>
 </ol>
 
-<h2>이거뭐임</h2>
-이거유투브보고따라하는거임ㅋㅋ
+<h2>1화 보러가기</h2>
+https://cafe.naver.com/minecenter1/12908 링크 
 </body>
 </html>
